--- a/fetch-json/style.css
+++ b/fetch-json/style.css
@@ -5,4 +5,42 @@ ul {
 h1 {
   text-align: center;
 }
-b
+body {
+  font-family: 'Roboto Slab', Raleway, sans-serif;
+  font-weight: 100;
+  line-height: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
+  word-wrap: break-word;
+}
+
+/*
+html {
+  font-family: sans-serif;
+}
+
+ul {
+  list-style-type: none;	
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+}
+
+li {
+  margin-bottom: 10px;
+  background-color: pink;
+  font-size: 150%;
+  border-top: 3px solid pink;
+  border-bottom: 3px solid pink;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.7);
+}
+
+strong {
+  background-color: purple;
+  color: white;
+  padding: 0 8px;
+  border-top: 3px solid purple;
+  border-bottom: 3px solid purple;
+  text-shadow: 2px 2px 1px black;
+}
+*/
