--- a/fetch-json/style.css
+++ b/fetch-json/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.loli.net/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext);
+@import url(https://fonts.loli.net/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext);
 ul {
   list-style-type: none;
 }
