--- a/fetch-json/style.css
+++ b/fetch-json/style.css
@@ -1,4 +1,8 @@
 @import url(https://fonts.loli.net/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext);
+body, h1, pre, p{
+  font-family: 'Roboto Slab', Raleway, sans-serif;
+  font-weight: 100;
+}
 ul {
   list-style-type: none;
 }
@@ -6,8 +10,6 @@ h1 {
   text-align: center;
 }
 body {
-  font-family: 'Roboto Slab', Raleway, sans-serif;
-  font-weight: 100;
   line-height: 2em;
   padding-left: 2em;
   padding-right: 2em;
